# foo_seek_box

./: CMakeLists.txt  Main.cpp  foo_seek_box.rc  foo_seek_box.vcproj  foo_seek_box.vcxproj  foo_seek_box.vcxproj.filters  resource.h  vcpkg.json
